Fix double borders

--- a/e-learning/src/components/Button.module.scss
+++ b/e-learning/src/components/Button.module.scss
@@ -105,6 +105,8 @@
     &:last-of-type {
       border-top-right-radius: var(--br);
       border-bottom-right-radius: var(--br);
+    }
+    & + .container {
       border-left: 0;
     }
   }
